mutants.out/log/src__convert.rs_line_52_col_5_002.log

*** src/convert.rs:52:5: replace encode -> String<E> with String::new(Default::default())

*** mutation diff:
--- src/convert.rs
+++ replace encode -> String<E> with String::new(Default::default())
@@ -44,42 +44,17 @@
 /// - `B` - Binary buffer capacity (must be ≥ 1 + payload.len() + 2)
 /// - `E` - Encoded output capacity (must be ≥ ceil(B * 8 / 5))
 ///
 /// # Panics
 ///
 /// Panics if the binary data exceeds `B` bytes or encoded output exceeds `E`
 /// bytes.
 pub fn encode<const B: usize, const E: usize>(ver: u8, payload: &[u8]) -> String<E> {
-    const {
-        assert!(
-            B >= 3,
-            "B must be at least 3 (1 version + 0 payload + 2 checksum)"
-        );
-        // E >= ceil(B * 8 / 5) is equivalent to E * 5 >= B * 8
-        assert!(
-            E * 5 >= B * 8,
-            "E must be at least ceil(B * 8 / 5) for base32 encoding"
-        );
-    }
-
-    // Build binary.
-    let mut d: Vec<u8, B> = Vec::new();
-    d.push(ver).unwrap();
-    d.extend_from_slice(payload).unwrap();
-    d.extend_from_slice(&checksum(&d)).unwrap();
-
-    // Encode as base32.
-    let mut encoded: Vec<u8, E> = Vec::new();
-    let encoded_len = data_encoding::BASE32_NOPAD.encode_len(d.len());
-    encoded.resize_default(encoded_len).unwrap();
-    data_encoding::BASE32_NOPAD.encode_mut(&d, &mut encoded);
-
-    // SAFETY: base32 encoding produces valid ASCII which is valid UTF-8
-    unsafe { String::from_utf8_unchecked(encoded) }
+    String::new(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 /// Decodes a base32 strkey string into a version byte and payload.
 ///
 /// The binary format is: `version (1 byte) || payload || checksum (2 bytes)`.
 ///
 /// # Generic Parameters
 ///


*** /Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=stellar-strkey@0.0.15
       Fresh libc v0.2.178
       Fresh unicode-ident v1.0.22
       Fresh cfg-if v1.0.4
       Fresh ryu v1.0.20
       Fresh memchr v2.7.6
       Fresh itoa v1.0.15
       Fresh autocfg v1.5.0
       Fresh serde_core v1.0.228
       Fresh getrandom v0.3.4
       Fresh proc-macro2 v1.0.103
       Fresh linux-raw-sys v0.11.0
       Fresh bitflags v2.10.0
       Fresh zerocopy v0.8.31
       Fresh fastrand v2.3.0
       Fresh once_cell v1.21.3
       Fresh byteorder v1.5.0
       Fresh quote v1.0.42
       Fresh serde v1.0.228
       Fresh rand_core v0.9.3
       Fresh serde_json v1.0.145
       Fresh rustix v1.1.2
       Fresh hash32 v0.3.1
       Fresh ppv-lite86 v0.2.21
       Fresh wait-timeout v0.2.1
       Fresh bit-vec v0.8.0
       Fresh syn v2.0.111
       Fresh tempfile v3.23.0
       Fresh stable_deref_trait v1.2.1
       Fresh fnv v1.0.7
       Fresh quick-error v1.2.3
       Fresh rand_chacha v0.9.0
       Fresh rand v0.9.2
       Fresh rand_xorshift v0.4.0
       Fresh num-traits v0.2.19
       Fresh bit-set v0.8.0
       Fresh lazy_static v1.5.0
       Fresh serde_derive v1.0.228
       Fresh rusty-fork v0.3.1
       Fresh heapless v0.8.0
       Fresh regex-syntax v0.8.8
       Fresh unarray v0.1.4
       Fresh data-encoding v2.9.0
       Fresh serde_test v1.0.177
       Fresh crate-git-revision v0.0.6
       Fresh proptest v1.8.0
       Dirty stellar-strkey v0.0.15 (/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp): the file `/index` is missing
   Compiling stellar-strkey v0.0.15 (/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp)
     Running `/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/build/stellar-strkey-7eeb440ac350857c/build-script-build`
     Running `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=5118e42c0f57517e -C extra-filename=-61edfdb3288b3b5e --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rmeta --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rmeta`
     Running `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=1fdb956222ce4886 -C extra-filename=-b28c69b8deb9cca3 --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rlib --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rlib --extern proptest=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libproptest-029c739a67ce9a84.rlib --extern serde_test=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libserde_test-1ab2fbb900abbf64.rlib`
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> src/convert.rs:52:5
   |
52 |     String::new(Default::default()) /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^ ------------------ unexpected argument
   |
note: associated function defined here
  --> /Users/leighmcculloch/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/heapless-0.8.0/src/string.rs:33:18
   |
33 |     pub const fn new() -> Self {
   |                  ^^^
help: remove the extra argument
   |
52 -     String::new(Default::default()) /* ~ changed by cargo-mutants ~ */
52 +     String::new() /* ~ changed by cargo-mutants ~ */
   |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `stellar-strkey` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=5118e42c0f57517e -C extra-filename=-61edfdb3288b3b5e --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rmeta --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `stellar-strkey` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leighmcculloch/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/bin/rustc --crate-name stellar_strkey --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("cli", "default", "serde", "serde-decoded"))' -C metadata=1fdb956222ce4886 -C extra-filename=-b28c69b8deb9cca3 --out-dir /tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps --extern data_encoding=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libdata_encoding-2105313bbaf8090b.rlib --extern heapless=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libheapless-ace7dc37e88ebbbe.rlib --extern proptest=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libproptest-029c739a67ce9a84.rlib --extern serde_test=/tmp/cargo-mutants-rs-stellar-strkey-noalloc-71vrKT.tmp/target/debug/deps/libserde_test-1ab2fbb900abbf64.rlib` (exit status: 1)

*** result: Failure(101)
